<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/name_mhs_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_field" />

        <TextView
            android:id="@+id/nrp_mhs_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nrp_field" />

        <TextView
            android:id="@+id/ipk_mhs_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ipk_field" />

        <TextView
            android:id="@+id/gender_mhs_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_field" />

    </LinearLayout>

</androidx.cardview.widget.CardView>