<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:labelFor="@id/name"
        android:text="@string/name_field"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="name"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nrp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:labelFor="@id/nrp"
        android:text="@string/nrp_field"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_label" />

    <EditText
        android:id="@+id/nrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="nrp"
        app:layout_constraintStart_toEndOf="@+id/nrp_label"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <TextView
        android:id="@+id/ipk_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:labelFor="@id/ipk"
        android:text="@string/ipk_field"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nrp_label" />

    <EditText
        android:id="@+id/ipk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:autofillHints="ipk"
        app:layout_constraintStart_toEndOf="@+id/ipk_label"
        app:layout_constraintTop_toTopOf="@+id/nrp" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/gender_field"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ipk_label" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="274dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/ipk">


        <RadioButton
            android:id="@+id/male"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:text="@string/female" />

    </RadioGroup>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_mhs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_mhs_height"
        android:layout_marginTop="84dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />


</androidx.constraintlayout.widget.ConstraintLayout>